Center intro and departments on colleges, center align department rows when less than 3, fix section 2 z-index

--- a/web/themes/custom/citizen_dart/components/03-composites/views/departments/_department-views.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/views/departments/_department-views.scss
@@ -8,14 +8,30 @@
 /* DEPARTMENTS BY COLLEGE
 --------------- */
 .departments.by-college{
+  @include desk{
+    max-width: 900px;
+    @include auto;
+  }
+  @include contentStop{
+    max-width: 1094px;
+  }
   .view-content{
     @include safeFlex(row,wrap,start,stretch);
     @include bleed(padding,20px);
+    &.center-departments{
+      @include smallTab{
+        justify-content: center;
+      }
+    }
+    @include contentStop{
+      @include bleed(padding,40px);
+    }
   }
   .views-row{
     max-width: 335px;
     @include smallTab{
       width: 50%;
+      max-width: 100%;
     }
     @include desk{
       width: 33.33%;
